--- a/environment.yml
+++ b/environment.yml
@@ -3,17 +3,18 @@ channels:
   - conda-forge
   
 dependencies:
-  - flake8
-  - jinja2
-  - markdown
-  - pyviz::nbsite
-  - pyviz::nbsmoke
-  - pyviz::pyctdev
-  - pytest
-  - pyyaml
-  - requests
-  - tornado<6
-  - m2r2
-  - botocore
-  - aiobotocore
-  
+  - python==3.7.11
+  - jinja2==3.0.1
+  - markdown==3.3.4
+  - pyviz::nbsite==0.6.7
+  - pyviz::pyctdev==0.6.4
+  - pyyaml==5.4.1
+  - requests==2.26.0
+  - tornado==5.1.1
+  - m2r2==0.3.1
+  - colorcet==2.0.6
+  - fastparquet==0.7.1
+  - intake==0.6.3
+  - intake-parquet==0.2.3
+  - s3fs==2021.8.0
+  - python-snappy==0.6.0
