--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -57,10 +57,13 @@ jobs:
         run: |
           eval "$(conda shell.bash hook)"
           conda activate pyviz
+          git status
+          ls -ll
           git checkout -b deploy
           git fetch "https://github.com/$GITHUB_REPOSITORY.git" cache:refs/remotes/cache  # all cached badges are in this branch
           git checkout cache -- ./doc/_static/cache
           cat dodo.py
+          git status
           doit build_website
       - name: git status
         run: |
