--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -12,6 +12,13 @@ on:
   workflow_dispatch:
 
 jobs:
+  log-github-event-goodies:
+    name: LOG Everything on GitHub Event
+    runs-on: 'ubuntu-latest'
+    steps:
+      - name: Logging
+        run: |
+          echo "${{toJSON(github.event)}}"
   build_docs:
     name: Documentation
     runs-on: 'ubuntu-latest'
