--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -19,10 +19,11 @@ jobs:
       - name: Logging
         run: |
           echo "${{toJSON(github.event)}}"
+          echo "${{github.event.commits[0].message}}""
   build_docs:
     name: Documentation
     runs-on: 'ubuntu-latest'
-    if: "contains(github.event.head_commit.message, 'website_dev') || github.ref == 'refs/heads/master'"
+    if: "contains(github.event.commits[0].message, 'website_dev') || github.ref == 'refs/heads/master'"
     timeout-minutes: 120
     defaults:
       run:
