--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -29,10 +29,29 @@ jobs:
           echo "${{toJSON(github.event.commits)}}"
           echo "all"
           echo "${{toJSON(github.event)}}"
+  pre_ci:
+    runs-on: 'ubuntu-latest'
+    steps:
+      - uses: actions/checkout@v2
+        with:
+          # required for PRs
+          fetch-depth: 2
+      - name: Get commit message
+        id: get_commit_message
+        run: |
+          if   [[ '${{ github.event_name }}' == 'push' ]]; then
+            echo ::set-output name=commit_message::$(git log --format=%B -n 1 HEAD)
+          elif [[ '${{ github.event_name }}' == 'pull_request' ]]; then
+            echo ::set-output name=commit_message::$(git log --format=%B -n 1 HEAD^2)
+          fi
+    outputs:
+      commit_message:
+        echo "${{ steps.get_commit_message.outputs.commit_message }}"
   build_docs:
     name: Documentation
     runs-on: 'ubuntu-latest'
-    if: "contains(github.event.commits[0].message, 'website_dev') || github.ref == 'refs/heads/master'"
+    needs: pre_ci
+    if: "contains(needs.pre_ci.outputs.commit_message, 'website_dev') || github.ref == 'refs/heads/master'"
     timeout-minutes: 120
     defaults:
       run:
