--- a/tools/tools.yml
+++ b/tools/tools.yml
@@ -111,6 +111,7 @@
 
     - repo: pyqtgraph/pyqtgraph
       site: http://www.pyqtgraph.org
+      builtons: [qt, opengl]
 
     - repo: glue-viz/glue
       site: http://docs.glueviz.org
@@ -122,6 +123,7 @@
     - repo: veusz/veusz
       conda_channel: conda-forge
       site: https://veusz.github.io
+      builtons: [qt]
 
     - repo: sciapp/gr
       site: https://gr-framework.org/python.html
@@ -131,6 +133,7 @@
       sponsors: [enthought]
       site: https://docs.enthought.com/chaco
       badges: pypi
+      builtons: [kiva]
 
 - name: Other InfoVis
   intro: InfoVis plotting libraries not fitting into other categories above.
@@ -512,12 +515,13 @@
       site: https://altair-viz.github.io/pdvega
       conda_channel: conda-forge
       badges: travis, pypi, conda, site
-      builtons: [vega]
+      builtons: [d3, vega]
       dormant: https://github.com/altair-viz/pdvega
 
     - repo: matplotlib/basemap
       site: https://matplotlib.org/basemap
       dormant: https://matplotlib.org/basemap/users/intro.html#cartopy-new-management-and-eol-announcement
+      builtons: [matplotlib]
 
     - repo: adrn/d3po
       site: https://d3po.org
@@ -527,11 +531,13 @@
     - repo: rossant/galry
       dormant: https://github.com/rossant/galry/blob/master/README.md
       badges: pypi, dormant
+      builtons: [opengl]
 
     - repo: yhat/ggpy
       site: http://ggplot.yhathq.com
       badges: pypi, site
       dormant: https://github.com/yhat/ggpy/graphs/contributors
+      builtons: [matplotlib]
 
     - repo: dgrtwo/gleam
       dormant: https://github.com/dgrtwo/gleam/graphs/contributors
@@ -545,24 +551,30 @@
       site: http://lightning-viz.org
       dormant: https://gitter.im/lightning-viz/lightning
       badges: pypi, dormant
+      builtons: [d3, leaflet]
 
     - repo: mpld3/mpld3
       site: https://mpld3.github.io
       dormant: http://www.xavierdupre.fr/app/pymyinstall/helpsphinx/blog/2017/2017-09-02_mpld3.html
+      builtons: [matplotlib, d3]
 
     - repo: PyQwt/PyQwt
       site: http://www.pyqtgraph.org
       dormant: https://github.com/PyQwt
       badges: site
+      builtons: [qt]
 
     - repo: PierreRaybaut/guiqwt
       site: https://pythonhosted.org/guiqwt/
       dormant: https://github.com/PierreRaybaut/guiqwt/graphs/contributors
       badges: site, pypi
+      builtons: [qt]
 
     - repo: wrobstory/vincent
       dormant: https://github.com/wrobstory/vincent/graphs/contributors
       badges: pypi, rtd
+      builtons: [d3, vega]
 
     - repo: almarklein/visvis
       dormant: https://github.com/almarklein/visvis#status
+      builtons: [opengl]
