use anaconda-project instead of pyctdev

--- a/.gitignore
+++ b/.gitignore
@@ -15,8 +15,8 @@ doc/_static/cache/
 # Site building temp output
 tools/pypi_invalid_badges.txt
 
-# doit
-.doit.db
-
 # pytest
 .pytest_cache
+
+# anaconda-project
+envs
