Removed conda badge from gradio; no conda package

--- a/tools/tools.yml
+++ b/tools/tools.yml
@@ -477,8 +477,8 @@
 
     - repo: gradio-app/gradio
       sponsors: [huggingface]
-      site: https://gradio.app/
-      badges: circleci, codecov, pypi, conda, site
+      site: https://gradio.app
+      badges: circleci, codecov, pypi, site
 
     - repo: fossasia/visdom
       site: https://github.com/fossasia/visdom/blob/master/README.md#visdom
