Add Shiny for Python
Fixes https://github.com/pyviz/pyviz.org/issues/136

--- a/tools/tools.yml
+++ b/tools/tools.yml
@@ -537,6 +537,12 @@
     - repo: mljar/bloxs
       badges: pypi
       sponsors: [mljar]
+      
+    - repo: rstudio/py-shiny
+      sponsors: [rstudio]
+      site: https://shiny.rstudio.com/py/
+      conda_channel: conda-forge
+      badges: pypi, conda
 
 
 - name: Colormapping
