--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -25,7 +25,7 @@ jobs:
           if   [[ '${{ github.event_name }}' == 'push' ]]; then
             echo "commit_message=$(git log --format=%B -n 1 HEAD)" >> $GITHUB_OUTPUT
           elif [[ '${{ github.event_name }}' == 'pull_request' ]]; then
-            echo commit_message=$(git log --format=%B -n 1 HEAD^2) >> $GITHUB_OUTPUT
+            echo "commit_message=$(git log --format=%B -n 1 HEAD^2)" >> $GITHUB_OUTPUT
           fi
     outputs:
       commit_message:
